--- a/index.html
+++ b/index.html
@@ -1,12 +1,70 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="light">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Projeto</h1>
+    <div id="container">
+      <div id="profile">
+        <img src="assets/avatar.png" alt="foto braços cruzados" />
+        <p>@dev.martinslcs</p>
+      </div>
+      <div id="switch" onclick="toggleMode()">
+        <button></button>
+        <span></span>
+      </div>
+      <ul>
+        <li>
+          <a href="https://www.linkedin.com/in/lucasmartinsds/" target="_blank"
+            >Perfil Linkedin</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.tecnovagas.com/users/758547ba-9f4a-4264-bd59-8a8e53622941/cv"
+            target="_blank"
+            >Perfil Tecnovagas</a
+          >
+        </li>
+        <li>
+          <a href="https://www.dio.me/users/ccplucasmartins" target="_blank"
+            >Perfil dio.me</a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/martinslcs" target="_blank"
+            >Veja meu portfólio</a
+          >
+        </li>
+      </ul>
+      <div id="social-links">
+        <a href="https://github.com/martinslcs" target="_blank">
+          <ion-icon name="logo-github"></ion-icon>
+        </a>
+        <a href="https://www.instagram.com/dev.martinslcs/" target="_blank">
+          <ion-icon name="logo-instagram"></ion-icon>
+        </a>
+        <a href="https://www.linkedin.com/in/lucasmartinsds/" target="_blank">
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a>
+      </div>
+    </div>
+
+    <footer>
+      Feito com ♥ por <a href="#" target="_blank">Lucas Martins </a>
+    </footer>
+
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
+
+    <script src="script.js"></script>
   </body>
 </html>
