--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="container">
       <div id="profile">
         <img src="assets/avatar.png" alt="foto braços cruzados" />
-        <p>@dev.martinslcs</p>
+        <p>Lucas Martins</p>
       </div>
       <div id="switch" onclick="toggleMode()">
         <button></button>
@@ -60,7 +60,7 @@
     </div>
 
     <footer>
-      Feito com ♥ por <a href="#" target="_blank">Lucas Martins </a>
+      Feito por <a href="#" target="_blank">Lucas Martins </a>
     </footer>
 
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
